# mcp-rag

./: .env.example  README.md  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/client/: gemini.py  supabase.py
app/models/: embed.py  search.py
app/services/: search.py
data/: 10_Luật Viễn thông 2023.md  11_Luật Giao dịch điện tử 2023.md  12_Luật Phòng thủ dân sự 2023.md  13_Luật Bảo vệ quyền lợi người tiêu dùng 2023.md  14_Luật Hợp tác xã 2023.md  15_Luật Giá 2023.md  16_Luật Xuất cảnh, nhập cảnh của công dân Việt Nam và Luật Nhập cảnh, xuất cảnh, quá cảnh, cư trú của n.md  17_Luật Đấu thầu 2023.md  18_Luật Công an nhân dân sửa đổi 2023.md  19_Luật khám bệnh, chữa bệnh 2023.md  1_Luật ban hành văn bản quy phạm pháp luật 2015.md  20_Luật Phòng, chống rửa tiền 2022.md  21_Luật Thanh tra 2022.md  22_Luật Dầu khí 2022.md  23_Luật Phòng, chống bạo lực gia đình 2022.md  24_Luật Thực hiện dân chủ ở cơ sở 2022.md  25_Luật Tần số vô tuyến điện sửa đổi 2022.md  26_Luật Kinh doanh bảo hiểm 2022.md  27_Luật Sở hữu trí tuệ sửa đổi 2022.md  28_Luật Thi đua, Khen thưởng 2022.md  29_Luật Điện ảnh 2022.md  2_Luật Đất đai 2024.md  30_Luật Cảnh sát cơ động 2022.md  3_Luật Các tổ chức tín dụng 2024.md  4_Luật sửa đổi Luật Đất đai, Luật Nhà ở, Luật Kinh doanh bất động sản và Luật Các tổ chức tín dụng 202.md  5_Luật Lực lượng tham gia bảo vệ an ninh, trật tự ở cơ sở 2023.md  6_Luật Kinh doanh bất động sản 2023.md  7_Luật Tài nguyên nước 2023.md  8_Luật Căn cước 2023.md  9_Luật Nhà ở 2023.md
rag/: indexer.py
scripts/: api.sh
server/: mcp.json  mcp_rag.py  utils.py
(+2 files in other folders)
